# Multimodel-RAG-Pixeltable

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  app.py  pyproject.toml
src/: __init__.py
src/api/: main.py
src/chat/: qa_service.py
src/config/: settings.py
src/core/: __init__.py  pixeltable_env.py  schema.py
src/ingestion/: service.py
src/processing/: build_text_chunks.py  page_descriptions.py  page_images.py  text_chunks.py
src/retrieval/: hybrid_retrieval.py
src/ui/: Home.py  api_client.py
src/ui/pages/: 1_Document_Ingestion.py  2_Ask_AI.py
src/utils/: exceptions.py  logging.py
